gc 관련 설정 제거